--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -115,18 +115,34 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rh8-fm-MQZ">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DM4-bb-LUG">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="trash" id="BXr-z1-Hbl">
+                                        <connections>
+                                            <action selector="deleteMeme:" destination="Plw-zg-pnF" id="PuM-Ee-cwW"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="MdM-q5-czs"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="DM4-bb-LUG" firstAttribute="top" secondItem="kfq-pr-HUY" secondAttribute="bottom" constant="536" id="8kB-fS-OY6"/>
                             <constraint firstItem="rh8-fm-MQZ" firstAttribute="centerX" secondItem="RIG-75-dMc" secondAttribute="centerX" id="Ce2-ri-3zL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="rh8-fm-MQZ" secondAttribute="trailing" constant="-20" id="G0T-Kr-48X"/>
                             <constraint firstItem="ob8-U4-VfJ" firstAttribute="top" secondItem="rh8-fm-MQZ" secondAttribute="bottom" id="QoP-RF-Ph4"/>
+                            <constraint firstItem="ob8-U4-VfJ" firstAttribute="top" secondItem="DM4-bb-LUG" secondAttribute="bottom" id="W08-v1-CMW"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="DM4-bb-LUG" secondAttribute="trailing" constant="-20" id="gB5-q6-9Ut"/>
                             <constraint firstItem="rh8-fm-MQZ" firstAttribute="centerY" secondItem="RIG-75-dMc" secondAttribute="centerY" id="gvF-CF-rPh"/>
+                            <constraint firstItem="DM4-bb-LUG" firstAttribute="leading" secondItem="RIG-75-dMc" secondAttribute="leadingMargin" constant="-20" id="hed-aV-fcY"/>
                             <constraint firstItem="rh8-fm-MQZ" firstAttribute="leading" secondItem="RIG-75-dMc" secondAttribute="leadingMargin" constant="-20" id="i5m-Aa-dJ3"/>
                             <constraint firstItem="rh8-fm-MQZ" firstAttribute="top" secondItem="RIG-75-dMc" secondAttribute="topMargin" id="vv0-wG-SaL"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="deleteButton" destination="DM4-bb-LUG" id="I8k-09-ozB"/>
                         <outlet property="imageView" destination="rh8-fm-MQZ" id="lUp-wg-hDJ"/>
                     </connections>
                 </viewController>
@@ -346,11 +362,6 @@
                     </collectionView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Sent Memes" id="AR6-JT-VMq">
-                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="64l-LX-BBX">
-                            <connections>
-                                <action selector="deleteCells:" destination="rfB-hI-sIR" id="nYV-qF-MWZ"/>
-                            </connections>
-                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="lW4-VX-6Jp">
                             <connections>
                                 <segue destination="BYZ-38-t0r" kind="presentation" id="ra3-cY-JYE"/>
